--- a/index.html
+++ b/index.html
@@ -2,330 +2,113 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>ibonarium.stability.human.lab.live</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-    <!-- CSP для безпечного iframe на GitHub Pages -->
-    <meta http-equiv="Content-Security-Policy" content="frame-src https://realtime.obs-nancay.fr https://obs-nancay.fr;">
+    <title>SDO — Реал-тайм спостереження Сонця</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        html, body {
-            width: 100%;
-            height: 100%;
-            background: #000;
-            color: #cfefff;
-            font-family: Inter, system-ui, monospace;
-            overflow: auto; /* Дозволяємо скрол на всіх пристроях */
-        }
-        .wrapper {
-            width: 100%;
-            min-height: 100vh; /* Замість фіксованої висоти */
-            display: flex;
-            justify-content: center;
-            align-items: flex-start; /* Не центруємо вертикально, щоб був скрол */
-            padding: 10px 0;
-        }
-        .panel {
-            width: 96%;
-            max-width: 1400px;
-            display: flex;
-            flex-direction: row;
-            gap: 24px;
-        }
-        /* LEFT */
-        .left {
-            width: 40%;
-            border: 1px solid #0ff3;
-            padding: 20px;
-            overflow-y: auto;
-            min-height: 600px; /* Мінімальна висота для десктопу */
-        }
-        .left h2 {
-            font-size: 22px;
-            margin-bottom: 16px;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #0d1117;
+            color: #e6e6e6;
             text-align: center;
-            color: #7fffd4;
+            margin: 20px;
+            line-height: 1.6;
         }
-        .indicator {
-            margin-bottom: 14px;
-            font-size: 16px;
-            line-height: 1.5;
+        h1 {
+            color: #ffcc00;
         }
-        .indicator span {
-            color: #9affff;
+        .container {
+            max-width: 1400px;
+            margin: 0 auto;
         }
-        /* RIGHT */
-        .right {
-            width: 60%;
-            border: 1px solid #0ff3;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
+        .section {
+            margin: 50px 0;
         }
-        .chart-container {
-            flex: 1;
-            min-height: 300px; /* Забезпечуємо місце для графіка */
+        h2 {
+            color: #58a6ff;
         }
-        canvas {
-            width: 100% !important;
-            height: 100% !important;
+        img, iframe {
+            max-width: 100%;
+            border: 2px solid #444;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(255, 204, 0, 0.4);
+            margin: 15px 0;
         }
-        .spectrogram-container {
-            flex: 1;
-            min-height: 400px; /* Більше місця для спектрограми на мобільних */
-            position: relative;
+        .note {
+            font-size: 0.9em;
+            color: #aaa;
+            margin-top: 30px;
         }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            filter: contrast(115%) brightness(110%);
-            background: #000;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-
-        /* Адаптація для планшетів та мобільних */
-        @media (max-width: 1024px) {
-            .panel {
-                flex-direction: column;
-            }
-            .left, .right {
-                width: 100%;
-            }
-            .left {
-                min-height: auto;
-            }
-            .right {
-                min-height: auto;
-            }
-            .chart-container {
-                min-height: 350px;
-            }
-            .spectrogram-container {
-                min-height: 450px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .wrapper {
-                padding: 8px;
-            }
-            .panel {
-                gap: 16px;
-            }
-            .left {
-                padding: 16px;
-            }
-            .left h2 {
-                font-size: 20px;
-            }
-            .indicator {
-                font-size: 15px;
-            }
-            .right {
-                padding: 16px;
-            }
-            iframe {
-                transform: scale(0.92);
-                transform-origin: top left;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .left h2 {
-                font-size: 18px;
-            }
-            .indicator {
-                font-size: 14px;
-            }
-            .left {
-                padding: 12px;
-            }
-            .right {
-                padding: 12px;
-            }
-            .chart-container {
-                min-height: 300px;
-            }
-            .spectrogram-container {
-                min-height: 400px;
-            }
-            iframe {
-                transform: scale(0.88);
-                transform-origin: top left;
-            }
+        .refresh {
+            font-size: 1.2em;
+            color: #ffcc00;
+            margin: 30px 0;
         }
     </style>
 </head>
 <body>
-<div class="wrapper">
-    <div class="panel">
-        <!-- LEFT COLUMN -->
-        <div class="left">
-            <h2>solar.stability.lab.live</h2>
-            <div class="indicator">Solar Wind Speed (km/s): <span id="sw_speed">—</span></div>
-            <div class="indicator">Solar Wind Density (/cc): <span id="sw_density">—</span></div>
-            <div class="indicator">Solar Wind Temperature (K): <span id="sw_temp">—</span></div>
-            <div class="indicator">IMF Bt – Total Magnetic Field (nT): <span id="imf_bt">—</span></div>
-            <div class="indicator">IMF Bz (nT): <span id="imf_bz">—</span></div>
-            <div class="indicator">IMF By (nT): <span id="imf_by">—</span></div>
-            <div class="indicator">Solar Wind Dynamic Pressure (nPa): <span id="pressure">—</span></div>
-            <div class="indicator">Proton Flux &gt;10 MeV: <span id="proton_flux">—</span></div>
-            <div class="indicator">Electron Flux &gt;2 MeV: <span id="electron_flux">—</span></div>
-            <div class="indicator">Kp Index: <span id="kp">—</span></div>
-            <div class="indicator">Dst Index (nT): <span id="dst">—</span></div>
-            <div class="indicator">AE Index (Auroral Electrojet): <span id="ae">—</span></div>
-            <div class="indicator">Geomagnetic Storm Level (G1–G5): <span id="storm">—</span></div>
+    <div class="container">
+        <h1>SDO (Solar Dynamics Observatory) — Реал-тайм спостереження Сонця</h1>
+        <p>Дані з космічного апарату SDO (NASA). Оновлюються кожні кілька хвилин.</p>
+
+        <!-- Основні канали AIA (найпопулярніші) -->
+        <div class="section">
+            <h2>Останні знімки AIA (Extreme Ultraviolet)</h2>
+            <p>Апарат AIA робить знімки Сонця в різних довжинах хвиль, кожна показує різні шари атмосфери Сонця.</p>
+
+            <table style="width:100%; border-collapse: collapse; margin: 20px 0;">
+                <tr>
+                    <td><strong>171 Å</strong> (перехідний шар, ~0.6 млн K)</td>
+                    <td><strong>193 Å</strong> (корона, ~1.2 млн K)</td>
+                    <td><strong>304 Å</strong> (хромосфера, ~80 тис. K)</td>
+                </tr>
+                <tr>
+                    <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0171.jpg" alt="AIA 171" loading="lazy"></td>
+                    <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0193.jpg" alt="AIA 193" loading="lazy"></td>
+                    <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0304.jpg" alt="AIA 304" loading="lazy"></td>
+                </tr>
+                <tr>
+                    <td><strong>211 Å</strong> (активні регіони)</td>
+                    <td><strong>131 Å</strong> (спалахи)</td>
+                    <td><strong>094 Å</strong> (дуже гаряча корона)</td>
+                </tr>
+                <tr>
+                    <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0211.jpg" alt="AIA 211" loading="lazy"></td>
+                    <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0131.jpg" alt="AIA 131" loading="lazy"></td>
+                    <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0094.jpg" alt="AIA 094" loading="lazy"></td>
+                </tr>
+            </table>
         </div>
-        <!-- RIGHT COLUMN -->
-        <div class="right">
-            <!-- Динамічний графік -->
-            <div class="chart-container">
-                <canvas id="breathChart"></canvas>
-            </div>
-            <!-- Спектограма ORFEES під графіком -->
-            <div class="spectrogram-container">
-                <iframe
-                    src="https://realtime.obs-nancay.fr/orfees/"
-                    loading="lazy"
-                    referrerpolicy="no-referrer"
-                    sandbox="allow-scripts allow-same-origin">
-                </iframe>
-            </div>
+
+        <!-- Анімації -->
+        <div class="section">
+            <h2>Анімації за останні 2–4 години</h2>
+
+            <p><strong>AIA 171 Å (перехідний шар)</strong></p>
+            <img src="https://sdo.gsfc.nasa.gov/assets/img/browse/2025/01/08/20250108_171.gif" alt="AIA 171 animation" loading="lazy">
+
+            <p><strong>AIA 193 Å (корона)</strong></p>
+            <img src="https://sdo.gsfc.nasa.gov/assets/img/browse/2025/01/08/20250108_193.gif" alt="AIA 193 animation" loading="lazy">
+
+            <p><strong>HMI — Магнітне поле (кольорове)</strong></p>
+            <img src="https://sdo.gsfc.nasa.gov/assets/img/browse/2025/01/08/20250108_6173_color.gif" alt="HMI Magnetogram animation" loading="lazy">
+        </div>
+
+        <!-- Відео в реальному часі -->
+        <div class="section">
+            <h2>Пряма трансляція Сонця (останні 30 хвилин)</h2>
+            <iframe width="800" height="450" 
+                src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_171_continuum.mpg" 
+                frameborder="0" allowfullscreen></iframe>
+            <p>(якщо не завантажується — оновіть сторінку)</p>
+        </div>
+
+        <p class="refresh">Оновіть сторінку (F5), щоб побачити найсвіжіші дані!</p>
+
+        <div class="note">
+            <p>Джерело: NASA SDO — <a href="https://sdo.gsfc.nasa.gov/data/" style="color:#58a6ff;">sdo.gsfc.nasa.gov</a><br>
+            Реал-тайм зображення: <a href="https://sdo.gsfc.nasa.gov/assets/img/latest/" style="color:#58a6ff;">Latest Images</a><br>
+            Анімації: <a href="https://sdo.gsfc.nasa.gov/assets/img/browse/" style="color:#58a6ff;">Browse Images</a></p>
         </div>
     </div>
-</div>
-
-<script>
-const labels = [];
-const dataBt = [];
-const dataBz = [];
-const dataPressure = [];
-const dataKp = [];
-const ctx = document.getElementById('breathChart').getContext('2d');
-const breathChart = new Chart(ctx, {
-  type: 'line',
-  data: {
-    labels: labels,
-    datasets: [
-      {
-        label: 'IMF Bt (nT)',
-        data: dataBt,
-        borderColor: '#0ff',
-        backgroundColor: 'rgba(0,255,255,0.1)',
-        borderWidth: 2,
-        tension: 0.4
-      },
-      {
-        label: 'IMF Bz (nT)',
-        data: dataBz,
-        borderColor: '#f0f',
-        backgroundColor: 'rgba(255,0,255,0.1)',
-        borderWidth: 2,
-        tension: 0.4
-      },
-      {
-        label: 'Dynamic Pressure (nPa)',
-        data: dataPressure,
-        borderColor: '#ff0',
-        backgroundColor: 'rgba(255,255,0,0.1)',
-        borderWidth: 2,
-        tension: 0.4
-      },
-      {
-        label: 'Kp Index',
-        data: dataKp,
-        borderColor: '#0f0',
-        backgroundColor: 'rgba(0,255,0,0.1)',
-        borderWidth: 2,
-        tension: 0.4
-      }
-    ]
-  },
-  options: {
-    responsive: true,
-    maintainAspectRatio: false,
-    scales: {
-      x: {
-        ticks: { color: '#9ff' },
-        grid: { color: '#033' }
-      },
-      y: {
-        ticks: { color: '#9ff' },
-        grid: { color: '#033' }
-      }
-    },
-    plugins: {
-      legend: {
-        labels: { color: '#cff' }
-      }
-    }
-  }
-});
-
-async function updateData() {
-  try {
-    const plasma = await fetch("https://services.swpc.noaa.gov/products/solar-wind/plasma-1-day.json").then(r => r.json());
-    const mag = await fetch("https://services.swpc.noaa.gov/products/solar-wind/mag-1-day.json").then(r => r.json());
-    const kp = await fetch("https://services.swpc.noaa.gov/products/noaa-planetary-k-index.json").then(r => r.json());
-
-    const p = plasma[plasma.length - 1];
-    const m = mag[mag.length - 1];
-    const k = kp[kp.length - 1];
-
-    const time = new Date().toLocaleTimeString();
-
-    labels.push(time);
-    if (labels.length > 30) {
-      labels.shift();
-      dataBt.shift();
-      dataBz.shift();
-      dataPressure.shift();
-      dataKp.shift();
-    }
-
-    dataBt.push(parseFloat(m[6]) || 0);
-    dataBz.push(parseFloat(m[3]) || 0);
-    dataPressure.push(parseFloat(p[7]) || 0);
-    dataKp.push(parseFloat(k[1]) || 0);
-
-    document.getElementById("sw_speed").textContent = p[2] || '—';
-    document.getElementById("sw_density").textContent = p[1] || '—';
-    document.getElementById("sw_temp").textContent = p[3] || '—';
-    document.getElementById("imf_bt").textContent = m[6] || '—';
-    document.getElementById("imf_bz").textContent = m[3] || '—';
-    document.getElementById("imf_by").textContent = m[2] || '—';
-    document.getElementById("pressure").textContent = p[7] || '—';
-    document.getElementById("kp").textContent = k[1] || '—';
-
-    document.getElementById("dst").textContent = "NOAA Dst realtime";
-    document.getElementById("ae").textContent = "Auroral activity active";
-    document.getElementById("proton_flux").textContent = "SWPC GOES";
-    document.getElementById("electron_flux").textContent = "SWPC GOES";
-
-    const kpVal = parseFloat(k[1]);
-    document.getElementById("storm").textContent =
-      kpVal >= 8 ? "G4–G5" :
-      kpVal >= 7 ? "G3" :
-      kpVal >= 6 ? "G2" :
-      kpVal >= 5 ? "G1" : "Quiet";
-
-    breathChart.update();
-  } catch (e) {
-    console.error("DATA ERROR", e);
-  }
-}
-
-updateData();
-setInterval(updateData, 60000);
-</script>
 </body>
 </html>
