--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
         h2 {
             color: #58a6ff;
         }
-        img, iframe {
+        img, video {
             max-width: 100%;
             border: 2px solid #444;
             border-radius: 8px;
             box-shadow: 0 0 15px rgba(255, 204, 0, 0.4);
             margin: 15px 0;
+        }
+        video {
+            width: 800px;
+            height: auto;
+            background: black;
         }
         .note {
             font-size: 0.9em;
@@ -43,23 +48,36 @@
             color: #ffcc00;
             margin: 30px 0;
         }
+        .warning {
+            color: #ff6666;
+            font-style: italic;
+        }
+        table {
+            margin: 0 auto;
+            border-collapse: separate;
+            border-spacing: 20px;
+        }
+        td {
+            text-align: center;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>SDO (Solar Dynamics Observatory) — Реал-тайм спостереження Сонця</h1>
-        <p>Дані з космічного апарату SDO (NASA). Оновлюються кожні кілька хвилин.</p>
+        <p>Дані з NASA SDO. Оновлюються кожні кілька хвилин.<br>
+        <span class="warning">Увага: сервер SDO зараз має проблеми з апаратним забезпеченням, тому деякі дані можуть завантажуватись повільно або тимчасово бути недоступними.</span></p>
 
-        <!-- Основні канали AIA (найпопулярніші) -->
         <div class="section">
-            <h2>Останні знімки AIA (Extreme Ultraviolet)</h2>
-            <p>Апарат AIA робить знімки Сонця в різних довжинах хвиль, кожна показує різні шари атмосфери Сонця.</p>
+            <h2>Останні знімки AIA (Extreme Ultraviolet, 1024px)</h2>
+            <p>Кожен канал показує різні температури та шари сонячної атмосфери.</p>
 
-            <table style="width:100%; border-collapse: collapse; margin: 20px 0;">
+            <table>
                 <tr>
-                    <td><strong>171 Å</strong> (перехідний шар, ~0.6 млн K)</td>
-                    <td><strong>193 Å</strong> (корона, ~1.2 млн K)</td>
-                    <td><strong>304 Å</strong> (хромосфера, ~80 тис. K)</td>
+                    <td>171 Å (перехідний шар, ~0.6 млн K)</td>
+                    <td>193 Å (корона, ~1.2 млн K)</td>
+                    <td>304 Å (хромосфера, ~80 тис. K)</td>
                 </tr>
                 <tr>
                     <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0171.jpg" alt="AIA 171" loading="lazy"></td>
@@ -67,9 +85,9 @@
                     <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0304.jpg" alt="AIA 304" loading="lazy"></td>
                 </tr>
                 <tr>
-                    <td><strong>211 Å</strong> (активні регіони)</td>
-                    <td><strong>131 Å</strong> (спалахи)</td>
-                    <td><strong>094 Å</strong> (дуже гаряча корона)</td>
+                    <td>211 Å (активні регіони)</td>
+                    <td>131 Å (спалахи)</td>
+                    <td>094 Å (гаряча корона)</td>
                 </tr>
                 <tr>
                     <td><img src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_0211.jpg" alt="AIA 211" loading="lazy"></td>
@@ -79,35 +97,39 @@
             </table>
         </div>
 
-        <!-- Анімації -->
         <div class="section">
-            <h2>Анімації за останні 2–4 години</h2>
+            <h2>Анімації / Відео за останні ~48 годин (MP4)</h2>
+            <p>Відео показують динаміку Сонця (спалахи, петлі, викиди). Завантажуються автоматично.</p>
 
             <p><strong>AIA 171 Å (перехідний шар)</strong></p>
-            <img src="https://sdo.gsfc.nasa.gov/assets/img/browse/2025/01/08/20250108_171.gif" alt="AIA 171 animation" loading="lazy">
+            <video controls autoplay loop muted>
+                <source src="https://sdo.gsfc.nasa.gov/assets/img/latest/mpeg/latest_1024_0171_synoptic.mp4" type="video/mp4">
+                Ваш браузер не підтримує відео.
+            </video>
 
             <p><strong>AIA 193 Å (корона)</strong></p>
-            <img src="https://sdo.gsfc.nasa.gov/assets/img/browse/2025/01/08/20250108_193.gif" alt="AIA 193 animation" loading="lazy">
+            <video controls autoplay loop muted>
+                <source src="https://sdo.gsfc.nasa.gov/assets/img/latest/mpeg/latest_1024_0193_synoptic.mp4" type="video/mp4">
+            </video>
+
+            <p><strong>AIA 304 Å (хромосфера та спалахи)</strong></p>
+            <video controls autoplay loop muted>
+                <source src="https://sdo.gsfc.nasa.gov/assets/img/latest/mpeg/latest_1024_0304_synoptic.mp4" type="video/mp4">
+            </video>
 
             <p><strong>HMI — Магнітне поле (кольорове)</strong></p>
-            <img src="https://sdo.gsfc.nasa.gov/assets/img/browse/2025/01/08/20250108_6173_color.gif" alt="HMI Magnetogram animation" loading="lazy">
+            <video controls autoplay loop muted>
+                <source src="https://sdo.gsfc.nasa.gov/assets/img/latest/mpeg/latest_1024_HMIBC.mp4" type="video/mp4">
+            </video>
         </div>
 
-        <!-- Відео в реальному часі -->
-        <div class="section">
-            <h2>Пряма трансляція Сонця (останні 30 хвилин)</h2>
-            <iframe width="800" height="450" 
-                src="https://sdo.gsfc.nasa.gov/assets/img/latest/latest_1024_171_continuum.mpg" 
-                frameborder="0" allowfullscreen></iframe>
-            <p>(якщо не завантажується — оновіть сторінку)</p>
-        </div>
-
-        <p class="refresh">Оновіть сторінку (F5), щоб побачити найсвіжіші дані!</p>
+        <p class="refresh">Оновіть сторінку (F5), щоб завантажити найсвіжіші зображення та відео!</p>
 
         <div class="note">
-            <p>Джерело: NASA SDO — <a href="https://sdo.gsfc.nasa.gov/data/" style="color:#58a6ff;">sdo.gsfc.nasa.gov</a><br>
+            <p>Джерело: NASA SDO — <a href="https://sdo.gsfc.nasa.gov/data/" style="color:#58a6ff;">sdo.gsfc.nasa.gov/data</a><br>
             Реал-тайм зображення: <a href="https://sdo.gsfc.nasa.gov/assets/img/latest/" style="color:#58a6ff;">Latest Images</a><br>
-            Анімації: <a href="https://sdo.gsfc.nasa.gov/assets/img/browse/" style="color:#58a6ff;">Browse Images</a></p>
+            Відео: <a href="https://sdo.gsfc.nasa.gov/assets/img/latest/mpeg/" style="color:#58a6ff;">Latest Movies</a><br>
+            Альтернативний сайт (якщо проблеми): <a href="https://www.lmsal.com/solarsoft/latest_events/" style="color:#58a6ff;">LMSAL Sun Today</a></p>
         </div>
     </div>
 </body>
